--- a/Source/TreasureGuide.Web/src/custom-elements/team-box.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-box.html
@@ -5,14 +5,14 @@
                 ${team.name}
             </legend>
             <score-display score.bind="team.score" team-id.bind="team.id"></score-display>
-            <div class="row">
+            <div class="row team">
                 <team-display team.bind="team.teamUnits" size="small" in-line></team-display>
             </div>
-            <div class="row">
+            <div class="row ship-stage">
                 <stage-display stage-id.bind="team.stageId"></stage-display>
                 <ship-display ship-id.bind="team.shipId"></ship-display>
             </div>
-            <div class="row">
+            <div class="row credits">
                 <user-display name.bind="team.submittedByName" unit-id.bind="team.submittedByUnitId"></user-display>
                 <span class="time">
                     ${team.editedDate | ageFormat}
