Updating LnF throughout.

--- a/Source/TreasureGuide.Web/src/app.html
+++ b/Source/TreasureGuide.Web/src/app.html
@@ -6,6 +6,7 @@
                 <li class="brand">
                     <a route-href="route: home" class="brand-logo">
                         ${router.title}
+                        <span class="beta">BETA</span>
                     </a>
                 </li>
                 <li repeat.for="nav of authorizedRoutes">
