--- a/Source/TreasureGuide.Web/src/custom-elements/team-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-search.html
@@ -18,13 +18,13 @@
                     </div>
                 </div>
                 <div class="col d6">
-                    <div class="col f6">
+                    <div class="col f5 _noPadding">
                         <div class="form-group">
                             <label for="unitInput">Captain</label>
                             <unit-display id="unitInput" unit-id.two-way="leaderId" editable="true"></unit-display>
                         </div>
                     </div>
-                    <div class="col f6">
+                    <div class="col f7 _noPadding">
                         <div class="form-group">
                             <label for="f2pSelect">Free to Play</label>
                             <select name="f2pSelect" class="_width100" value.bind="freeToPlay">
