--- a/Source/TreasureGuide.Web/src/app.html
+++ b/Source/TreasureGuide.Web/src/app.html
@@ -15,7 +15,7 @@
                     </a>
                 </li>
                 <li class="_floatRight" if.bind="!accountService.isLoggedIn">
-                    <a href="/Account/Login">
+                    <a href="#" click.trigger="accountService.login()">
                         Login
                     </a>
                 </li>
