--- a/Source/TreasureGuide.Web/src/custom-elements/team-box.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-box.html
@@ -11,13 +11,16 @@
             </div>
             <div class="row">
                 <ship-display ship-id.bind="team.shipId"></ship-display>
+            </div>
+            <div class="row">
                 <stage-display stage-id.bind="team.stageId"></stage-display>
             </div>
             <div class="row">
-                <user-display name.bind="team.submittedByName" unit-id.bind="team.submittedByUnitId"></user-display>
-                <span class="time">
+                <div class="submission">
+                    -
+                    <user-display name.bind="team.submittedByName" unit-id.bind="team.submittedByUnitId"></user-display>
                     ${team.editedDate | ageFormat}
-                </span>
+                </div>
             </div>
         </fieldset>
     </a>
