Adding discord links.

--- a/Source/TreasureGuide.Web/src/app.html
+++ b/Source/TreasureGuide.Web/src/app.html
@@ -53,6 +53,9 @@
             <a class="button _small _info" href="https://github.com/RoboCafaz/TreasureGuide">
                 <i class="fa fa-fw fa-github"></i>View on GitHub
             </a>
+            <a class="button _small _info" href="https://discord.gg/vtAeMas">
+                <img src="/content/Discord-Logo-White.svg" class="fa fa-fw" />Join the Discord
+            </a>
             <br />
             Game data sourced from <a href="https://optc-db.github.io/" target="_blank">OPTC-db</a>
         </div>
