--- a/Source/TreasureGuide.Web/src/custom-elements/editors/markdown-editor.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/editors/markdown-editor.html
@@ -6,7 +6,7 @@
         <div if.bind="!editing">
             <markdown value.bind="value" class="preview"></markdown>
         </div>
-        <button class="button _xsmall _info _floatLeft" title="Toggle Preview" click.delegate="toggle()">
+        <button type="button" class="button _xsmall _info _floatLeft" title="Toggle Preview" click.delegate="toggle()">
             <i class="fa fa-fw fa-eye"></i>
         </button>
         <small><em>Markdown is supported.</em></small>
