--- a/Source/TreasureGuide.Web/src/custom-elements/ship-display.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/ship-display.html
@@ -1,5 +1,5 @@
 ﻿<template>
-    <button if.bind="editable" class="_small" click.delegate="clicked()">
+    <button type="button" if.bind="editable" class="_small" click.delegate="clicked()">
         <i class="fa fa-fw fa-ship"></i>
         ${ship.name}
     </button>
