--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/team-import.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/team-import.html
@@ -1,13 +1,13 @@
 ﻿<template>
-    <ux-dialog>
-        <ux-dialog-header>
-            <div class="_floatRight">
-                <a click.delegate="cancel()" class="button _flat modal-action">X</a>
-            </div>
-            <h3>Import from optc-db</h3>
-        </ux-dialog-header>
-        <ux-dialog-body>
-            <form>
+    <form>
+        <ux-dialog>
+            <ux-dialog-header>
+                <div class="_floatRight">
+                    <a click.delegate="cancel()" class="button _flat modal-action">X</a>
+                </div>
+                <h3>Import from optc-db</h3>
+            </ux-dialog-header>
+            <ux-dialog-body>
                 <fieldset>
                     <legend>Import</legend>
                     <a href="http://optc-db.github.io/damage/#/" class="button _success _xlarge _width100" target="_blank">
@@ -24,11 +24,11 @@
                         <team-display team.bind="team" ship.bind="ship"></team-display>
                     </div>
                 </fieldset>
-            </form>
-        </ux-dialog-body>
-        <ux-dialog-footer>
-            <a click.delegate="submit()" class="button _primary modal-action">Accept</a>
-            <a click.delegate="cancel()" class="button modal-action">Cancel</a>
-        </ux-dialog-footer>
-    </ux-dialog>
+            </ux-dialog-body>
+            <ux-dialog-footer>
+                <input type="submit" click.delegate="submit()" class="button _primary modal-action" name="Accept" />
+                <a click.delegate="cancel()" class="button modal-action">Cancel</a>
+            </ux-dialog-footer>
+        </ux-dialog>
+    </form>
 </template>
