--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
@@ -1,13 +1,13 @@
 ﻿<template>
-    <ux-dialog>
-        <ux-dialog-header>
-            <div class="_floatRight">
-                <a click.delegate="cancel()" class="button _flat modal-action">X</a>
-            </div>
-            <h3>Select a Unit</h3>
-        </ux-dialog-header>
-        <ux-dialog-body>
-            <form with.bind="searchModel">
+    <form with.bind="searchModel">
+        <ux-dialog>
+            <ux-dialog-header>
+                <div class="_floatRight">
+                    <a click.delegate="cancel()" class="button _flat modal-action">X</a>
+                </div>
+                <h3>Select a Unit</h3>
+            </ux-dialog-header>
+            <ux-dialog-body>
                 <div class="row">
                     <fieldset>
                         <legend>
@@ -65,32 +65,32 @@
                             </div>
                         </div>
                         <div class="row">
-                            <button class="button _floatRight" click.trigger="reset()">Reset</button>
+                            <button type="button" class="button _floatRight" click.trigger="reset()">Reset</button>
                         </div>
                     </fieldset>
                 </div>
-            </form>
-            <loading-area if.bind="loading"></loading-area>
-            <div if.bind="!loading">
-                <div class="row">
-                    <search-pager search-model.bind="searchModel"></search-pager>
-                </div>
-                <div class="row _alignCenter">
-                    <div class="unit-collection">
-                        <unit-display repeat.for="unit of units" unit-id.bind="unit.id" name.bind="unit.name" click.delegate="clicked(unit.id)" clickable="true"></unit-display>
+                <loading-area if.bind="loading"></loading-area>
+                <div if.bind="!loading">
+                    <div class="row">
+                        <search-pager search-model.bind="searchModel"></search-pager>
+                    </div>
+                    <div class="row _alignCenter">
+                        <div class="unit-collection">
+                            <unit-display repeat.for="unit of units" unit-id.bind="unit.id" name.bind="unit.name" click.delegate="clicked(unit.id)" clickable="true"></unit-display>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <search-pager search-model.bind="searchModel" bottom="true"></search-pager>
                     </div>
                 </div>
-                <div class="row">
-                    <search-pager search-model.bind="searchModel" bottom="true"></search-pager>
-                </div>
-            </div>
-        </ux-dialog-body>
-        <ux-dialog-footer>
-            <a click.delegate="clicked(null)" class="button _danger modal-action">
-                <i class="fa fa-fw fa-user-times"></i>
-                Unset
-            </a>
-            <a click.delegate="cancel()" class="button modal-action">Cancel</a>
-        </ux-dialog-footer>
-    </ux-dialog>
+            </ux-dialog-body>
+            <ux-dialog-footer>
+                <a click.delegate="clicked(null)" class="button _danger modal-action">
+                    <i class="fa fa-fw fa-user-times"></i>
+                    Unset
+                </a>
+                <a click.delegate="cancel()" class="button modal-action">Cancel</a>
+            </ux-dialog-footer>
+        </ux-dialog>
+    </form>
 </template>
