--- a/Source/TreasureGuide.Web/src/custom-elements/team-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-search.html
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="col m3">
-                    <button class="button _floatRight" click.trigger="reset()">Reset</button>
+                    <button type="button" class="button _floatRight" click.trigger="reset()">Reset</button>
                 </div>
             </div>
         </fieldset>
