Fixing several unit checkboxes.

--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/stage-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/stage-picker.html
@@ -14,7 +14,7 @@
                         <input id="termInput" type="text" value.two-way="term & debounce" placeholder="Water Seven..." />
 
                         <label for="checkInput">
-                            <input type="checkbox" checked.two-way="global" />
+                            <input id="checkInput" type="checkbox" checked.two-way="global" />
                             <span class="-label-body">Global</span>
                         </label>
                     </div>
