--- a/Source/TreasureGuide.Web/src/custom-elements/team-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-search.html
@@ -27,7 +27,7 @@
                     <div class="col f7 _noPadding">
                         <div class="form-group">
                             <label for="f2pSelect">Free to Play</label>
-                            <select name="f2pSelect" class="_width100" value.bind="freeToPlay">
+                            <select id="f2pSelect" class="_width100" value.bind="freeToPlay">
                                 <option repeat.for="option of freeToPlayOptions" model.bind="option.value">${option.name}</option>
                             </select>
                         </div>
