--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
@@ -45,13 +45,13 @@
                         <div class="row">
                             <div class="col m4">
                                 <label for="globalInput">
-                                    <input type="checkbox" checked.two-way="global" />
+                                    <input id="globalInput" type="checkbox" checked.two-way="global" />
                                     <span class="-label-body">Global</span>
                                 </label>
                             </div>
                             <div class="col m4">
                                 <label for="freeToPlayInput">
-                                    <input type="checkbox" checked.two-way="freeToPlay" />
+                                    <input id="freeToPlayInput" type="checkbox" checked.two-way="freeToPlay" />
                                     <span class="-label-body">F2P</span>
                                 </label>
                             </div>
