Updating team search stuff.

--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/stage-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/stage-picker.html
@@ -1,61 +1,40 @@
 ﻿<template>
-    <form with.bind="searchModel">
-        <ux-dialog>
-            <ux-dialog-header>
-                <div class="_floatRight">
-                    <a click.delegate="cancel()" class="button _flat modal-action">X</a>
-                </div>
-                <h3>Select a Stage</h3>
-            </ux-dialog-header>
-            <ux-dialog-body>
+    <ux-dialog>
+        <ux-dialog-header>
+            <div class="_floatRight">
+                <a click.delegate="cancel()" class="button _flat modal-action">X</a>
+            </div>
+            <h3>Select a Stage</h3>
+        </ux-dialog-header>
+        <ux-dialog-body>
+            <stage-search search-model.two-way="searchModel"></stage-search>
+            <loading-area if.bind="loading"></loading-area>
+            <div if.bind="!loading">
                 <div class="row">
-                    <div class="col m8">
-                        <label for="termInput">Term</label>
-                        <input id="termInput" type="text" value.two-way="term & debounce" placeholder="Water Seven..." />
-
-                        <label for="checkInput">
-                            <input id="checkInput" type="checkbox" checked.two-way="global" />
-                            <span class="-label-body">Global</span>
-                        </label>
-                    </div>
-                    <div class="col m4">
-                        <label for="typeInput">
-                            Stage Type
-                        </label>
-                        <stage-type-picker id="typeInput" stage-type.two-way="type"></stage-type-picker>
-                    </div>
+                    <search-pager search-model.bind="searchModel"></search-pager>
+                </div>
+                <div class="row" if.bind="stages.length > 0">
+                    <ul class="listnav">
+                        <li repeat.for="stage of stages" class="${(stageId === stage.id ? 'active' : '')}">
+                            <a href="#" click.delegate="clicked(stage.id)">
+                                <global-display global.bind="stage.global"></global-display>
+                                ${stage.name}
+                                <stage-type-display type.bind="stage.type" class="_floatRight"></stage-type-display>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
                 <div class="row">
-                    <button type="button" class="button _floatRight" click.trigger="reset()">Reset</button>
+                    <search-pager search-model.bind="searchModel" bottom="true"></search-pager>
                 </div>
-                <loading-area if.bind="loading"></loading-area>
-                <div if.bind="!loading">
-                    <div class="row">
-                        <search-pager search-model.bind="searchModel"></search-pager>
-                    </div>
-                    <div class="row" if.bind="stages.length > 0">
-                        <ul class="listnav">
-                            <li repeat.for="stage of stages" class="${(stageId === stage.id ? 'active' : '')}">
-                                <a href="#" click.delegate="clicked(stage.id)">
-                                    <global-display global.bind="stage.global"></global-display>
-                                    ${stage.name}
-                                    <stage-type-display type.bind="stage.type" class="_floatRight"></stage-type-display>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="row">
-                        <search-pager search-model.bind="searchModel" bottom="true"></search-pager>
-                    </div>
-                </div>
-            </ux-dialog-body>
-            <ux-dialog-footer>
-                <a click.delegate="clicked(null)" class="button _danger modal-action">
-                    <i class="fa fa-fw fa-map-o"></i>
-                    Unset
-                </a>
-                <a click.delegate="cancel()" class="button modal-action">Cancel</a>
-            </ux-dialog-footer>
-        </ux-dialog>
-    </form>
+            </div>
+        </ux-dialog-body>
+        <ux-dialog-footer>
+            <a click.delegate="clicked(null)" class="button _danger modal-action">
+                <i class="fa fa-fw fa-map-o"></i>
+                Unset
+            </a>
+            <a click.delegate="cancel()" class="button modal-action">Cancel</a>
+        </ux-dialog-footer>
+    </ux-dialog>
 </template>
