--- a/Source/TreasureGuide.Web/src/custom-elements/team-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-search.html
@@ -12,7 +12,7 @@
                         <label for="userInput">User Name</label>
                         <input id="userInput" type="text" class="_width100" value.bind="submittedBy & debounce" placeholder="Luffy..." />
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" if.bind="!stageLocked">
                         <label for="stageInput">Stage</label>
                         <stage-display id="stageInput" class="_width100" editable="true" stage-id.two-way="stageId"></stage-display>
                     </div>
