Updating markdown reference.

--- a/Source/TreasureGuide.Web/src/custom-elements/editors/markdown-editor.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/editors/markdown-editor.html
@@ -9,6 +9,6 @@
         <button type="button" class="button _xsmall _info _floatLeft" title="Toggle Preview" click.delegate="toggle()">
             <i class="fa fa-fw fa-eye"></i>
         </button>
-        <small><em>Markdown is supported.</em></small>
+        <small><em><a route-href="route: markdown" target="_blank">Markdown</a> is supported.</em></small>
     </div>
 </template>
