Updating search texts.

--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
@@ -20,12 +20,12 @@
                                 </label>
                                 <input id="termInput"
                                        type="text"
-                                       placeholder="Unit name..."
+                                       placeholder="Luffy..."
                                        value.two-way="term & debounce" />
                             </div>
                             <div class="col m4">
                                 <label for="classInput">
-                                    Unit Class
+                                    Class
                                 </label>
                                 <unit-class-picker id="classInput" unit-class.two-way="classes"></unit-class-picker>
                                 <label for="forceClassInput">
@@ -37,7 +37,7 @@
                             </div>
                             <div class="col m4">
                                 <label for="typeInput">
-                                    Unit Type
+                                    Type
                                 </label>
                                 <unit-type-picker id="typeInput" unit-type.two-way="types"></unit-type-picker>
                             </div>
