--- a/Source/TreasureGuide.Web/src/custom-elements/stage-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/stage-search.html
@@ -4,7 +4,7 @@
             <legend>Search</legend>
             <div class="row">
                 <div class="col m4">
-                    <label for="termInput">Term</label>
+                    <label for="termInput">Stage Name</label>
                     <input id="termInput" type="text" class="_width100" value.two-way="term & debounce" placeholder="Water Seven..." />
                 </div>
                 <div class="col m4">
