Auto-focusing name fields on opening search dialogs.

--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
@@ -21,6 +21,7 @@
                                 <input id="termInput"
                                        type="text"
                                        placeholder="Luffy..."
+                                       focus="true"
                                        value.two-way="term & debounce" />
                             </div>
                             <div class="col m4">
