--- a/Source/TreasureGuide.Web/src/custom-elements/stage-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/stage-search.html
@@ -5,7 +5,9 @@
             <div class="row">
                 <div class="col m4">
                     <label for="termInput">Stage Name</label>
-                    <input id="termInput" type="text" class="_width100" value.two-way="term & debounce" placeholder="Water Seven..." />
+                    <input id="termInput" type="text" class="_width100" 
+                           focus="true" value.two-way="term & debounce"
+                           placeholder="Water Seven..." />
                 </div>
                 <div class="col m4">
                     <label for="checkInput">
