--- a/Source/TreasureGuide.Web/src/custom-elements/team-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-search.html
@@ -6,7 +6,7 @@
                 <div class="col d6">
                     <div class="form-group">
                         <label for="termInput">Team Name</label>
-                        <input id="termInput" type="text" class="_width100" value.bind="term & debounce" placeholder="Urouge Colo..." />
+                        <input id="termInput" type="text" class="_width100" value.bind="term & debounce" focus="true" placeholder="Urouge Colo..." />
                     </div>
                     <div class="form-group" if.bind="!userLocked">
                         <label for="userInput">User Name</label>
