--- a/Source/TreasureGuide.Web/src/custom-elements/search-pager.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/search-pager.html
@@ -1,9 +1,16 @@
 <template>
-    <div class="_floatLeft" show.bind="hasResults">
-        <aup-pagination current-page.two-way="searchModel.page" page-size.two-way="searchModel.pageSize" page-sizes.bind="pageSizes" total-items.bind="searchModel.totalResults"></aup-pagination>
-    </div>
-    <div class="_floatRight" show.bind="hasResults">
-        <p>${startIndex} - ${endIndex} of ${searchModel.totalResults}</p>
+    <div show.bind="hasResults">
+        <div class="row">
+            <div class="_floatLeft">
+                <aup-pagination current-page.two-way="searchModel.page" page-size.two-way="searchModel.pageSize" page-sizes.bind="pageSizes" total-items.bind="searchModel.totalResults"></aup-pagination>
+            </div>
+            <div class="_floatRight" show.bind="hasResults">
+                <p>${startIndex} - ${endIndex} of ${searchModel.totalResults}</p>
+            </div>
+        </div>
+        <div class="row" show.bind="!bottom">
+            <sort-buttons search-model.two-way="searchModel"></sort-buttons>
+        </div>
     </div>
     <h3 class="_alignCenter" show.bind="!bottom && !hasResults">Search yielded no results!</h3>
 </template>
