--- a/Source/TreasureGuide.Web/src/custom-elements/team-display.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-display.html
@@ -1,3 +1,3 @@
 ﻿<template>
-    <unit-display repeat.for="unit of teamSlots" unit-id.two-way="unit.unitId" name.two-way="unit.name" info.bind="true" editable.bind="editable"></unit-display>
+    <team-slot repeat.for="slot of slots" team-slot.bind="slot" editable.bind="editable"></team-slot>
 </template>
