--- a/Source/TreasureGuide.Web/src/custom-elements/team-display.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-display.html
@@ -1,3 +1,3 @@
 ﻿<template>
-    <team-slot repeat.for="slot of slots" team-slot.bind="slot" editable.bind="editable"></team-slot>
+    <team-slot repeat.for="i of 6" team.bind="team" index.bind="i" editable.bind="editable"></team-slot>
 </template>
