--- a/Source/TreasureGuide.Web/src/custom-elements/team-slot.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-slot.html
@@ -1,11 +1,15 @@
 <template>
     <div class="team-slot-container">
-        <div class="team-unit" repeat.for="unit of teamSlot">
-            <unit-display if.bind="unit.unitId" unit-id.bind="unit.unitId" unit-name.bind="unit.unitName" editable.bind="editable"></unit-display>
+        <div class="team-unit">
+            <unit-display if.bind="main" unit-id.two-way="main.unitId" unit-name.two-way="main.unitName" editable.bind="editable" selected.delegate="checkRemoved($event, false)"></unit-display>
+            <unit-display if.bind="canAddMain" editable="true" selected.delegate="addUnit($event, false)"></unit-display>
         </div>
         <div class="team-subs">
-            <div class="team-unit" if.bind="editable">
-                <unit-display size="small" editable.bind="editable"></unit-display>
+            <div class="team-unit" repeat.for="sub of subs">
+                <unit-display unit-id.two-way="sub.unitId" unit-name.two-way="sub.unitName" editable.bind="editable" selected.delegate="checkRemoved($event, true)"></unit-display>
+            </div>
+            <div class="team-unit" if.bind="canAddSubs">
+                <unit-display editable="true" selected.delegate="addUnit($event, true)"></unit-display>
             </div>
         </div>
     </div>
