--- a/Source/TreasureGuide.Web/src/custom-elements/unit-display.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/unit-display.html
@@ -4,8 +4,6 @@
         <button type="button" class.bind="buttonClass" click.delegate="clicked()" style.bind="backgroundStyle">
             <i class.bind="iconClass" if.bind="!unitId"></i>
         </button>
+        <a if.bind="info && !editable && unitId" class="unit-link" href.bind="link" target="_blank"></a>
     </div>
-    <a if.bind="info && unitId" class="button _info _xsmall unit-link" href.bind="link" target="_blank">
-        <i class="fa fa-fw fa-info-circle"></i>
-    </a>
 </template>
