Including friend captain in leader searches. Adding exclusion option.

--- a/Source/TreasureGuide.Web/src/custom-elements/team-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-search.html
@@ -23,6 +23,12 @@
                             <label for="unitInput">Captain</label>
                             <unit-display id="unitInput" unit-id.two-way="leaderId" editable="true"></unit-display>
                         </div>
+                        <div class="form-group">
+                            <label for="noHelpCheckbox">
+                                <input id="noHelpCheckbox" type="checkbox" checked.bind="noHelp" />
+                                <span class="-label-body"> No Friends</span>
+                            </label>
+                        </div>
                     </div>
                     <div class="col f7 _noPadding">
                         <div class="form-group">
