--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
@@ -20,11 +20,12 @@
                                 </label>
                                 <input id="termInput"
                                        type="text"
+                                       class="_width100"
                                        placeholder="Luffy..."
                                        focus="true"
                                        value.two-way="term & debounce" />
                             </div>
-                            <div class="col m4">
+                            <div class="col m5">
                                 <label for="classInput">
                                     Class
                                 </label>
@@ -36,7 +37,7 @@
                                     <span class="-label-body">Exclude Others</span>
                                 </label>
                             </div>
-                            <div class="col m4">
+                            <div class="col m3">
                                 <label for="typeInput">
                                     Type
                                 </label>
@@ -44,19 +45,19 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col m4">
+                            <div class="col m3">
                                 <label for="globalInput">
                                     <input id="globalInput" type="checkbox" checked.two-way="global" />
                                     <span class="-label-body">Global</span>
                                 </label>
                             </div>
-                            <div class="col m4">
+                            <div class="col m3">
                                 <label for="freeToPlayInput">
                                     <input id="freeToPlayInput" type="checkbox" checked.two-way="freeToPlay" />
                                     <span class="-label-body">F2P</span>
                                 </label>
                             </div>
-                            <div class="col m4">
+                            <div class="col m3">
                                 <!--<label for="myBoxInput">
                                     <input id="myBoxInput"
                                            type="checkbox"
@@ -64,9 +65,9 @@
                                     <span class="-label-body">My Box</span>
                                 </label>-->
                             </div>
-                        </div>
-                        <div class="row">
-                            <button type="button" class="button _floatRight" click.trigger="reset()">Reset</button>
+                            <div class="col m3">
+                                <button type="button" class="button _floatRight" click.trigger="reset()">Reset</button>
+                            </div>
                         </div>
                     </fieldset>
                 </div>
