--- a/Source/TreasureGuide.Web/src/custom-elements/unit-type-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/unit-type-picker.html
@@ -1,5 +1,5 @@
 ﻿<template>
-    <select class="_width100" value.bind="unitType">
-        <option repeat.for="unitType of unitTypes" model.bind="unitType.id">${unitType.name}</option>
-    </select>
+    <bit-button repeat.for="unit of unitTypes" value.two-way="unitType" model.bind="unit.id">
+        <img src="/content/types/${unit.id}.png" title.bind="unit.name" />
+    </bit-button>
 </template>
